# grant-agent

./: .gitignore  Dockerfile  LICENSE  README.md  grantsearch  requirements.txt
.devcontainer/: devcontainer.json
crewai/dev_grant/: README.md  pyproject.toml  run.sh  streamlit_app.py
crewai/dev_grant/src/dev_grant/: crew.py  main.py
crewai/dev_grant/src/dev_grant/config/: agents.yaml  tasks.yaml
crewai/dev_grant/src/dev_grant/tools/: __init__.py  custom_tool.py
crewai/dev_grant/streamlit/: create_user_preference.py
google-adk/: .gitignore  README.md  create_release_zip.sh  create_user_preference.py  current_requirements.txt  grantsearch_cli.py  log_handler.py  main.py  main_adapter_ui.py  pyproject.toml  run_ui.sh  setup_env.sh  streamlit_app.py
google-adk/agents/: __init__.py  definitions.py  models.yaml
google-adk/config/: agents_config.yaml  tasks_config.yaml
google-adk/grant_adk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
google-adk/tools/: __init__.py  common_tools.py  csv_tools.py  pdf_tools.py  web_tools.py
grantsearch-docker/: README.md  build-image.sh  build.sh  clean-data.sh  cleanup-image.sh  cleanup.sh  create-dist-package.sh  debug.sh  docker-compose.yml  extract-app.sh  full-release.sh  inspect-image.sh  install.sh  rebuild.sh  start-grantsearch.sh
grantsearch-docker/grantsearch-dist/: Dockerfile  README.md  docker-compose.yml  start-grantsearch.sh
