[project]
name = "grant_adk"
version = "0.5.0"
description = "grant search using google ADK"
authors = [
    { name = "Hiroto Yoshimura" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "google-adk==0.5.0",
    "html2text==2024.2.26",
    "langchain==0.3.24",
    "langchain-google-genai==2.1.3",
    "PyPDF2==3.0.1",
    "pymupdf4llm==0.0.17",
    "pandas==2.2.3",
    "python-dotenv==1.1.0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "streamlit==1.44.1",
    "streamlit-autorefresh==1.0.1",
    "streamlit-mermaid==0.3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "streamlit_app",
    "log_handler",
    "create_user_preference",
    "grantsearch_cli",
    "main_adapter_ui"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
exclude = [
    "agents*",
    "config*",
    "knowledge*",
    ".venv*",
    "_build_temp*",
    "tests*",
    "*.egg-info*"
]

